--- a/index.html
+++ b/index.html
@@ -28,20 +28,21 @@
     --stage-vignette: rgba(0,0,0,.25);
     --spark-bg:#0B1220;
   }
-  /* LIGHT: Aurora Blush Luxe */
+
+  /* LIGHT: Aurora Blush Luxe — refined */
   html[data-theme="light"]{
-    --bg-deep:#F8F6F2; --bg-ink:#F2EAE1; --bg-soft:#EDE6DF;
-    --text:#26252A; --muted:#5C5965;
-    --gold:#C7A861; --gold-deep:#A38946;
-    --violet:#7D69C2; --opal:#8AA8BD;
-    --ring:#7E7261;
-    --card:#FFFFFF; --card-edge:#E8E2DA;
-    --glass: rgba(255,255,255,.8);
+    --bg-deep:#FAF9F6; --bg-ink:#F4EFE9; --bg-soft:#EEE7E0;
+    --text:#26252A; --muted:#56535F;
+    --gold:#C6A45E; --gold-deep:#A38747;
+    --violet:#7B6AC0; --opal:#7FA1B8;
+    --ring:#84765F;
+    --card:#FFFFFF; --card-edge:#E9E2DA;
+    --glass: rgba(255,255,255,.86);
     --btn-text:#1A1A1A;
-    --select-bg1:#FFFFFF; --select-bg2:#F6F2EC; --select-text:#222; --select-shadow: rgba(167,137,75,.18);
-    --accent-edge:rgba(167,137,75,.35);
-    --stage-vignette: rgba(150,134,120,.18);
-    --spark-bg:#F6F2EC;
+    --select-bg1:#FFFFFF; --select-bg2:#F6F2EC; --select-text:#222; --select-shadow: rgba(167,137,75,.16);
+    --accent-edge:rgba(167,137,75,.30);
+    --stage-vignette: rgba(150,134,120,.14);
+    --spark-bg:#F7F3EE;
     --shadow-strong:0 24px 60px rgba(0,0,0,.14);
     --shadow-soft:0 12px 38px rgba(0,0,0,.08);
   }
@@ -51,7 +52,7 @@
     font-family:Inter,system-ui,Segoe UI,Arial,sans-serif; color:var(--text); min-height:100vh;
     background:
       radial-gradient(1200px 600px at 50% -20%, var(--bg-ink), var(--bg-ink)),
-      radial-gradient(1200px 600px at 50% 120%, rgba(28,21,55,.45), transparent 60%),
+      radial-gradient(1200px 600px at 50% 120%, rgba(28,21,55,.30), transparent 60%),
       linear-gradient(180deg, var(--bg-deep), var(--bg-ink));
     overflow-x:hidden; transition: background var(--transition), color var(--transition);
   }
@@ -78,6 +79,7 @@
     border:1px solid var(--accent-edge); cursor:pointer; backdrop-filter: blur(6px);
     box-shadow:var(--shadow-soft); color:var(--text); font-weight:700; transition:transform .2s;
   }
+  html[data-theme="light"] .theme-toggle{ background:linear-gradient(180deg, #fff, #FAF7F2) }
   .theme-toggle:hover{ transform:translateY(-1px) }
   .theme-toggle svg{ width:18px; height:18px }
 
@@ -101,8 +103,16 @@
   .ol{counter-reset:num}.ol li{list-style:none;margin:10px 0;padding-left:8px;color:var(--muted)}
   .ol li:before{counter-increment:num;content:counter(num) ". ";font-weight:800;color:var(--gold)}
 
-  .row{display:flex;gap:14px;flex-wrap:wrap;justify-content:center;margin:22px 0}
+  .row{display:flex;gap:12px;flex-wrap:wrap;justify-content:center;margin:22px 0}
   .note{opacity:.8;text-align:center;margin-top:10px;color:var(--muted)}
+
+  /* Search + Select combo */
+  .search{
+    padding:14px 14px; min-width:260px; border-radius:14px; border:1px solid var(--accent-edge);
+    background:linear-gradient(180deg,#fff,#F7F5F0); color:#222; outline:none;
+    box-shadow:0 10px 26px var(--select-shadow), inset 0 1px 0 #fff;
+  }
+  html[data-theme="dark"] .search{ background:linear-gradient(180deg,#fff,#ECEBF3); }
 
   .select{
     appearance:none; text-align:center; font-family:"Playfair Display",serif; font-weight:700; font-size:16px;
@@ -192,14 +202,29 @@
 
   .card{display:none;text-align:center}
   .card.show{display:block}
+
+  /* Result card with gilded frame (always visible; stronger during capture) */
   #resultCard{
-    margin-top:16px; padding:22px 22px 24px; border-radius:18px;
+    margin-top:16px; padding:26px 24px 26px; border-radius:18px;
     background:linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02));
     border:1px solid var(--accent-edge); box-shadow:var(--shadow-strong);
     transform:scale(.96); opacity:0; animation:revealPop .7s ease .05s forwards;
     position:relative; overflow:visible; transition: background var(--transition), border-color var(--transition);
   }
   html[data-theme="light"] #resultCard{ background:#fff }
+  /* ornamental inner frame */
+  #resultCard::before{
+    content:""; position:absolute; inset:-10px; border-radius:24px;
+    background:
+      linear-gradient(135deg, rgba(255,255,255,.0), rgba(255,255,255,.35)),
+      conic-gradient(from 0deg, #b8944a 0%, #e5d09a 25%, #b8944a 50%, #e5d09a 75%, #b8944a 100%);
+    -webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
+            mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
+    -webkit-mask-composite: xor; mask-composite: exclude;
+    padding:3px; opacity:.7; pointer-events:none; box-shadow:0 0 30px rgba(199,167,84,.12);
+  }
+  /* thicker frame just for capture */
+  .capture-boost::before{ inset:-16px; padding:7px; opacity:.9; }
 
   @keyframes revealPop{from{transform:translateY(14px) scale(.96);opacity:0}to{transform:translateY(0) scale(1);opacity:1}}
 
@@ -208,8 +233,8 @@
     box-shadow:0 12px 32px rgba(0,0,0,.55);overflow:hidden;border:1px solid var(--accent-edge); position:relative;
   }
   html[data-theme="light"] .img{ background:#EFE9E1 }
-
   .img img{width:100%;height:100%;object-fit:cover}
+
   .aura{position:absolute; left:50%; top:0; width:0; height:0; pointer-events:none}
   .orb{position:absolute; width:8px;height:8px;border-radius:50%;
        background:radial-gradient(circle,#fff, rgba(255,255,255,.0) 70%); box-shadow:0 0 16px rgba(225,199,122,.6); opacity:.95}
@@ -227,11 +252,14 @@
   .label{font-weight:800;color:#F0E4BC; letter-spacing:.2px}
   html[data-theme="light"] .label{ color:#A0812E }
 
-  .toolbar{display:flex;gap:10px;justify-content:center;margin-top:14px}
+  .toolbar{display:flex;gap:10px;justify-content:center;margin-top:16px}
   footer{opacity:.8;text-align:center;margin:56px 0 14px;font-size:14px}
 
-  /* small helpers */
   .visually-hidden{position:absolute!important;clip:rect(1px,1px,1px,1px);padding:0!important;border:0!important;height:1px!important;width:1px!important;overflow:hidden}
+
+  /* FAQ */
+  .faq dt{font-weight:800;margin-top:12px}
+  .faq dd{margin:6px 0 14px;color:var(--muted)}
 </style>
 </head>
 <body>
@@ -252,7 +280,7 @@
       <h2>How to Perform</h2>
       <div class="card-lite">
         <ol class="ol">
-          <li>Choose your species below.</li>
+          <li>Choose your species (search available).</li>
           <li>The ritual circle will appear.</li>
           <li>Tap it once — it trembles for ~5 seconds with growing light.</li>
           <li>Then your companion is revealed. Save it if you wish.</li>
@@ -261,6 +289,7 @@
     </section>
 
     <div class="row" style="margin-top:18px">
+      <input id="search" class="search" type="text" placeholder="Search species… (e.g., wolf, cat)" aria-label="Search species" disabled>
       <label for="species" class="visually-hidden">Species</label>
       <select id="species" class="select" disabled>
         <option value="" selected disabled>Select your species…</option>
@@ -300,20 +329,39 @@
       </div>
     </div>
 
-    <section class="sec" id="bundlesSection">
-      <h2>Bundles & Add-ons</h2>
-      <div class="card-lite">
-        <p style="color:var(--muted)">Explore curated sets and guardians to deepen your practice.</p>
-        <p style="margin-top:12px">
-          <a href="https://vtomo.etsy.com" target="_blank" class="btn btn-primary">Visit the Vtomo Shop</a>
-        </p>
-      </div>
-    </section>
-
+    <!-- Gentle Chant BEFORE Bundles -->
     <section class="sec">
       <h2>A Gentle Chant</h2>
       <div class="card-lite" style="padding:14px 16px">
         <em style="color:inherit;opacity:.9">“I return to the quiet center, and let the truest part of me breathe.”</em>
+      </div>
+    </section>
+
+    <!-- FAQ (English) -->
+    <section class="sec">
+      <h2>FAQ</h2>
+      <div class="card-lite">
+        <dl class="faq">
+          <dt>Is the first reveal permanent?</dt>
+          <dd>The first reveal is saved on your current device for the selected species. You can reset it from the toolbar if you wish.</dd>
+          <dt>Can I save the reveal as an image?</dt>
+          <dd>Yes. Use “Save as Image”. The golden frame is included in the download.</dd>
+          <dt>Why do I need to select a species first?</dt>
+          <dd>Each ritual is attuned to its species and mirrors different aspects of your energy.</dd>
+          <dt>Does theme affect the saved image?</dt>
+          <dd>Yes. The image captures your current theme (Dark or Light).</dd>
+        </dl>
+      </div>
+    </section>
+
+    <!-- Bundles LAST -->
+    <section class="sec" id="bundlesSection" style="margin-bottom:36px">
+      <h2>Bundles & Add-ons</h2>
+      <div class="card-lite" style="display:flex; flex-wrap:wrap; align-items:center; justify-content:space-between; gap:16px">
+        <p style="color:var(--muted); margin:0; flex:1 1 420px">Explore curated sets and guardians to deepen your practice.</p>
+        <p style="margin:0">
+          <a href="https://vtomo.etsy.com" target="_blank" class="btn btn-primary" style="padding:12px 24px">Visit the Vtomo Shop</a>
+        </p>
       </div>
     </section>
 
@@ -330,7 +378,7 @@ const GVIZ_URL = "https://docs.google.com/spreadsheets/d/1C4roXeCrWmFI_xPGoGLdan
 /** 2) State */
 const KEY_PREFIX = "vtomo_reveal_v1_";
 const THEME_KEY = "vtomo_theme";
-let DB = {}; let speciesList = []; let busy = false;
+let DB = {}; let speciesList = []; let busy = false; let filtered = [];
 
 /** THEME: init + toggle */
 function applyTheme(theme){
@@ -391,15 +439,16 @@ async function fetchSheet(){
 }
 
 /** 4) UI helpers */
-function populateSpecies(){
+function populateSpecies(list = speciesList){
   const sel = document.getElementById('species');
   sel.innerHTML = '<option value="" selected disabled>Select your species…</option>';
-  speciesList.forEach(s=>{
+  list.forEach(s=>{
     const opt = document.createElement('option');
     opt.value = s; opt.textContent = s.charAt(0).toUpperCase()+s.slice(1);
     sel.appendChild(opt);
   });
   sel.disabled = false;
+  document.getElementById('search').disabled = false;
 }
 
 function pulse(){
@@ -539,10 +588,13 @@ function render(c){
   document.getElementById('msg').textContent = "";
 }
 
-/** 7) Save as image — capture with current theme */
+/** 7) Save as image — capture with golden frame (boosted during capture) */
 async function saveAsImage(){
   const card = document.getElementById('resultCard');
-  const canvas = await html2canvas(card, {scale:2}); // let it render gradients as-is
+  card.classList.add('capture-boost');
+  // let layout settle
+  await new Promise(r=>setTimeout(r,50));
+  const canvas = await html2canvas(card, {scale:2, backgroundColor:null});
   const url = canvas.toDataURL("image/png");
   const a = document.createElement('a');
   a.href = url;
@@ -550,6 +602,7 @@ async function saveAsImage(){
   const theme = document.documentElement.getAttribute('data-theme') || 'dark';
   a.download = `vtomo_${sp}_reveal_${theme}.png`;
   a.click();
+  card.classList.remove('capture-boost');
 }
 
 /** 8) main */
@@ -563,8 +616,21 @@ async function saveAsImage(){
     console.error(e);
   }
 
-  document.getElementById('species').addEventListener('change', ()=>{
-    const sp = document.getElementById('species').value;
+  // Search filter
+  const search = document.getElementById('search');
+  const speciesSel = document.getElementById('species');
+  let debTimer;
+  search.addEventListener('input', ()=>{
+    clearTimeout(debTimer);
+    debTimer = setTimeout(()=>{
+      const q = search.value.trim().toLowerCase();
+      filtered = !q ? speciesList : speciesList.filter(s=> s.includes(q));
+      populateSpecies(filtered);
+    }, 120);
+  });
+
+  speciesSel.addEventListener('change', ()=>{
+    const sp = speciesSel.value;
     if (!sp) return;
     document.getElementById('stage').classList.remove('hidden');
     document.getElementById('result').classList.remove('show');
@@ -574,7 +640,7 @@ async function saveAsImage(){
 
   document.getElementById('circle').addEventListener('click', async ()=>{
     if (busy) return;
-    const sp = document.getElementById('species').value;
+    const sp = speciesSel.value;
     if(!sp){ alert("Please select a species first."); return; }
 
     busy = true;
@@ -596,7 +662,7 @@ async function saveAsImage(){
   });
 
   document.getElementById('reset').addEventListener('click', ()=>{
-    const sp = document.getElementById('species').value;
+    const sp = speciesSel.value;
     if (!sp) return;
     if (confirm(`Reset the ${sp} reveal on this device?`)) resetSpecies(sp);
   });
