--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <ol class="ol">
           <li>Use the Species box to search & select.</li>
           <li>The ritual circle will appear.</li>
-          <li>Tap it once — it trembles for ~5 seconds with growing light.</li>
+          <li>Tap it once.</li>
           <li>Your companion is revealed. Save it if you wish.</li>
         </ol>
       </div>
@@ -632,3 +632,4 @@ function onSpeciesChosen(sp){
 </script>
 </body>
 </html>
+
