--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   }
   body::before{
     content:""; position:fixed; inset:0; pointer-events:none;
-    background:radial-gradient(900px 360px at 50% -80px, transparent, var(--stage-vignette) 75%),
+    background:radial-gradient(900px 360px at 50% -80px, transparent, var.--stage-vignette 75%),
                radial-gradient(1100px 480px at 50% 110%, transparent, var(--stage-vignette) 70%);
     z-index:0;
   }
@@ -94,7 +94,7 @@
   html[data-theme="light"] .card-lite{ background:#fff }
 
   .ol{counter-reset:num}.ol li{list-style:none;margin:10px 0;padding-left:8px;color:var(--muted)}
-  .ol li:before{counter-increment=num;content:counter(num) ". ";font-weight:800;color:var(--gold)}
+  .ol li:before{counter-increment:num;content:counter(num) ". ";font-weight:800;color:var(--gold)}
 
   .row{display:flex;gap:12px;flex-wrap:wrap;justify-content:center;margin:22px 0}
   .note{opacity:.8;text-align:center;margin-top:10px;color:var(--muted)}
@@ -111,7 +111,7 @@
   }
   .btn-ghost:hover{border-color:#c9b37a;box-shadow:0 10px 24px rgba(199,167,84,.18)}
 
-  /* ======== Combobox ======== */
+  /* ======== Combobox (Search + Select in one) ======== */
   .combo{position:relative; min-width:320px;}
   .combo-input{
     width:100%; padding:14px 44px 14px 16px; border-radius:14px; border:1px solid var(--accent-edge);
@@ -207,6 +207,8 @@
     -webkit-mask-composite: xor; mask-composite: exclude;
     padding:3px; opacity:.7; pointer-events:none; box-shadow:0 0 30px rgba(199,167,84,.12);
   }
+  .capture-boost::before{ inset:-16px; padding:7px; opacity:.9; }
+  @keyframes revealPop{from{transform:translateY(14px) scale(.96);opacity:0}to{transform:translateY(0) scale(1);opacity:1}}
   .img{
     width:252px;height:252px;border-radius:18px;margin:0 auto 18px;background:#0F1525;display:grid;place-items:center;
     box-shadow:0 12px 32px rgba(0,0,0,.55);overflow:hidden;border:1px solid var(--accent-edge); position:relative;
@@ -256,12 +258,12 @@
           <li>Use the Species box to search & select.</li>
           <li>The ritual circle will appear.</li>
           <li>Tap it once.</li>
-          <li>Your companion is revealed.</li>
+          <li>Your companion is revealed. Save it if you wish.</li>
         </ol>
       </div>
     </section>
 
-    <!-- Combobox -->
+    <!-- Combobox: search+select in one control -->
     <div class="row" style="margin-top:18px">
       <div class="combo" id="speciesCombo" aria-haspopup="listbox" aria-owns="speciesListbox">
         <input id="comboInput" class="combo-input" type="text" placeholder="Species… (type to search)" aria-autocomplete="list" aria-expanded="false" autocomplete="off" disabled />
@@ -271,7 +273,7 @@
     </div>
     <p class="note" id="prepMsg">Please choose a species to begin the ritual.</p>
 
-    <!-- Ritual stage -->
+    <!-- Circle appears only after a species is chosen -->
     <div class="stage hidden" id="stage">
       <div class="circle-wrap">
         <div class="ring"></div>
@@ -296,14 +298,14 @@
         <div class="field" id="personality">—</div>
         <div class="field" id="why">—</div>
         <div class="toolbar">
-          <!-- Save button removed -->
+          <button class="btn-ghost" id="saveImg" disabled>Save as Image</button>
           <button class="btn-ghost" id="reset">Reset</button>
         </div>
         <p class="note" id="msg"></p>
       </div>
     </div>
 
-    <!-- Gentle Chant -->
+    <!-- Gentle Chant BEFORE Bundles -->
     <section class="sec">
       <h2>A Gentle Chant</h2>
       <div class="card-lite" style="padding:14px 16px">
@@ -311,7 +313,7 @@
       </div>
     </section>
 
-    <!-- FAQ -->
+    <!-- FAQ (English) -->
     <section class="sec">
       <h2>FAQ</h2>
       <div class="card-lite">
@@ -319,14 +321,14 @@
           <dt>Is the first reveal permanent?</dt>
           <dd>The first reveal is saved on your current device for the selected species. You can reset it from the toolbar if you wish.</dd>
           <dt>Can I save the reveal as an image?</dt>
-          <dd>Image saving is currently disabled to keep the ritual simple and stable.</dd>
-          <dt>Does theme affect the reveal?</dt>
-          <dd>Yes. The on-page reveal follows your current theme (Dark or Light).</dd>
+          <dd>Yes. Use “Save as Image”. The golden frame is included in the download.</dd>
+          <dt>Does theme affect the saved image?</dt>
+          <dd>Yes. The image captures your current theme (Dark or Light).</dd>
         </dl>
       </div>
     </section>
 
-    <!-- Bundles -->
+    <!-- Bundles LAST -->
     <section class="sec" id="bundlesSection" style="margin-bottom:36px">
       <h2>Bundles & Add-ons</h2>
       <div class="card-lite" style="display:flex; flex-wrap:wrap; align-items:center; justify-content:space-between; gap:16px">
@@ -340,6 +342,9 @@
     <footer>Personal use only • © Vtomo</footer>
   </div>
 
+<!-- html2canvas for “Save as Image” -->
+<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+
 <script>
 /** Sheet JSON URL */
 const GVIZ_URL = "https://docs.google.com/spreadsheets/d/1C4roXeCrWmFI_xPGoGLdanQlJueINxaoUvfEs4uX_OA/gviz/tq?tqx=out:json&sheet=companions";
@@ -352,7 +357,7 @@ let DB = {}; let speciesList = []; let busy = false;
 /* ===== THEME (Default Dark on first visit) ===== */
 (function initTheme(){
   const saved = localStorage.getItem(THEME_KEY);
-  const first = saved || 'dark';
+  const first = saved || 'dark';           // default dark
   applyTheme(first);
 })();
 function applyTheme(theme){
@@ -431,7 +436,10 @@ function renderList(items){
     div.role = 'option';
     div.textContent = s.charAt(0).toUpperCase()+s.slice(1);
     div.dataset.value = s;
-    div.addEventListener('mousedown', (e)=>{ e.preventDefault(); chooseSpecies(s); });
+    div.addEventListener('mousedown', (e)=>{ // use mousedown to select before blur
+      e.preventDefault();
+      chooseSpecies(s);
+    });
     comboList.appendChild(div);
   });
 }
@@ -441,11 +449,13 @@ function filterList(q){
   if (!viewList.length){ comboList.innerHTML = '<div class="combo-item" aria-disabled="true" style="opacity:.6">No matches</div>'; return; }
   renderList(viewList);
 }
+
 function chooseSpecies(value){
   comboInput.value = value.charAt(0).toUpperCase()+value.slice(1);
   closeList();
   onSpeciesChosen(value);
 }
+
 comboInput.addEventListener('focus', ()=>{
   if (comboInput.disabled) return;
   filterList(comboInput.value);
@@ -464,7 +474,7 @@ comboInput.addEventListener('keydown', (e)=>{
 });
 document.addEventListener('click', (e)=>{ if (!combo.contains(e.target)) closeList(); });
 
-/* ===== Ritual VFX & aura ===== */
+/* ===== Ritual flow ===== */
 function pulse(){
   const circle = document.getElementById('circle');
   circle.style.boxShadow = "0 0 90px rgba(225,199,122,.55)";
@@ -505,6 +515,7 @@ function superBurst(){
     if (frame<95) requestAnimationFrame(step); else ctx.clearRect(0,0,d,d);
   })();
 }
+
 function buildAura(){
   const aura = document.getElementById('aura'); aura.innerHTML = '';
   const mkOrbit = (cls, r, count) => {
@@ -546,8 +557,23 @@ function render(c){
   document.getElementById('personality').innerHTML = c.personality ? `<span class="label">Personality:</span> ${c.personality}` : "—";
   document.getElementById('why').innerHTML         = c.why ? `<span class="label">Why He Chose You:</span> ${c.why}` : "—";
   document.getElementById('result').classList.add('show');
-  const card = document.getElementById('resultCard'); card.style.animation='none'; card.getBoundingClientRect(); card.style.animation='';
+  const card = document.getElementById('resultCard'); card.style.animation='none'; card.getBoundingClientRect(); card.style.animation=''; 
+  document.getElementById('saveImg').disabled = false;
   document.getElementById('msg').textContent = "";
+}
+
+/* Save as image with golden frame */
+async function saveAsImage(){
+  const card = document.getElementById('resultCard');
+  card.classList.add('capture-boost');
+  await new Promise(r=>setTimeout(r,50));
+  const canvas = await html2canvas(card, {scale:2, backgroundColor:null});
+  const url = canvas.toDataURL("image/png");
+  const a = document.createElement('a');
+  const sp = (window.currentSpecies || 'companion');
+  const theme = document.documentElement.getAttribute('data-theme') || 'dark';
+  a.href = url; a.download = `vtomo_${sp}_reveal_${theme}.png`; a.click();
+  card.classList.remove('capture-boost');
 }
 
 /* Species chosen -> show stage */
@@ -555,6 +581,7 @@ function onSpeciesChosen(sp){
   window.currentSpecies = sp;
   document.getElementById('stage').classList.remove('hidden');
   document.getElementById('result').classList.remove('show');
+  document.getElementById('saveImg').disabled = true;
   document.getElementById('prepMsg').textContent = `Ready for the ${sp} ritual. Tap the circle once.`;
 }
 
@@ -564,7 +591,7 @@ function onSpeciesChosen(sp){
     await fetchSheet();
     if (!speciesList.length){ document.getElementById('prepMsg').textContent = "No data found."; return; }
     comboInput.disabled = false;
-    filterList('');
+    filterList(''); // initialize suggestions
   }catch(e){
     document.getElementById('prepMsg').textContent = "Loading error. Please try again later.";
     console.error(e);
@@ -578,7 +605,7 @@ function onSpeciesChosen(sp){
     const circle = document.getElementById('circle');
     burstSpark(); pulse();
     circle.classList.add('shaking','charging');
-    await new Promise(r => setTimeout(r, 5000));
+    await new Promise(r => setTimeout(r, 5000)); // 5s ritual
     circle.classList.remove('shaking','charging');
     superBurst();
     const saved = localStorage.getItem(KEY_PREFIX + sp);
@@ -595,6 +622,8 @@ function onSpeciesChosen(sp){
     }
   });
 
+  document.getElementById('saveImg').addEventListener('click', saveAsImage);
+
   window.addEventListener('resize', ()=>{
     const canvas = document.getElementById('spark');
     if (!canvas) return; const d = canvas.parentElement.clientWidth; canvas.width = d; canvas.height = d;
@@ -603,3 +632,5 @@ function onSpeciesChosen(sp){
 </script>
 </body>
 </html>
+
+
